tests/slice_bad_range_order.stderr
tests/slice_bad_range_order.sl:4:17: error: SL2004: type mismatch
